<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/frag_1"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/frag_1"/>

    <item
        android:id="@+id/frag_2"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/frag_2"/>

    <item
        android:id="@+id/frag_3"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/frag_3"/>

    <item
        android:id="@+id/frag_4"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/frag_4"/>

    <item
        android:id="@+id/frag_5"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/frag_5"/>

</menu>
